k8s/backend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app 
  namespace: production
  labels:
    app: backend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
        - name: node-backend
          image: sidnal08/mern-backend:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3500
