k8s/db-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db
  namespace: production
  labels:
    app: mysql-db
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mysql-db
  template:
    metadata:
      labels:
        app: mysql-db
    spec:
      containers:
        - name: mysql
          image: sidnal08/mern-mysql:1.0
          ports:
            - containerPort: 3306
              name: db-port
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-pv-claim
