k8s/frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  namespace: production
  labels:
    app: frontend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
        - name: react-frontend
          image: sidnal08/mern-frontend:1.0
          ports:
            - containerPort: 80
