k8s/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: production
  name: backend-container
spec:
  type: ClusterIP
  selector:
    app: backend-app
  ports:
    - port: 3500
      targetPort: 3500
