k8s/db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: production
  name: mysql-container
spec:
  type: ClusterIP
  selector:
    app: mysql-db
  ports:
    - port: 3306
      targetPort: db-port
      protocol: TCP
