k8s/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  namespace: production
  name: frontend-app
spec:
  type: ClusterIP
  selector:
    app: frontend-app
  ports:
    - port: 80
      targetPort: 80
